--- a/styless/portfolio.css
+++ b/styless/portfolio.css
@@ -72,9 +72,13 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+section{
+    margin-top: 130px;
+    text-align: center;
+}
 
 .about-me{
-    margin-top: 130px;
+    
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 155px;
@@ -90,6 +94,7 @@ main{
     color: #757575;
     font-size: 18px;
     margin-bottom: 30px;
+    text-align: left;
 }
 .about-info-container{
     display: flex;
@@ -108,3 +113,115 @@ main{
     font-weight: 1000;
     color: #474747;
 }
+/* My skills */
+.what-i-do{
+    margin-top: 130px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 35px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px
+    rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    
+}
+.skill-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #757575;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.what-i-do-description{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: center;
+    color: #474747;
+    font-size: 15px;
+}
+/* Resume styles */
+.resume{
+}
+.reusme-content{
+    display: flex;
+    gap: 24px;
+    text-align: left;
+    margin-top: 120px;
+}
+.resume-title{
+    font-weight: 700;
+    font-size: 30px;
+    color: #474747;
+}
+.resume-item-title{
+    font-weight: 700;
+    font-size: 20px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+    font-weight: 600;
+    font-size: 17px;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.resume-item-about{
+    font-weight: 400;
+    font-size: 14px;
+    color: #757575;
+}.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-btn{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contact styles */
+
+.contact{
+    display: flex;
+    gap: 110px;
+    background-color: hsl(25, 100%, 98%);
+    padding: 130px 200px;
+    
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact input, textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    
+}
+input{
+    height: 24px;
+}
+.message{
+    width: 1000px;
+
+}
+.contact a{
+    text-decoration: none;
+    margin-right: 5px;
+}
+
+
+
