--- a/styless/portfolio.css
+++ b/styless/portfolio.css
@@ -26,7 +26,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 5px 200px;
+    padding: 30px 200px;
 }
 .nav-title{
     font-weight: 800;
